updated to use new saveimage function